# rockmate

./: .gitignore  B_graph_ex.ipynb  Btools.py  COPYING  D_gr_to_DF_gr.py  Dtools.py  Graph.py  K_node_example.ipynb  Ktools.py  README.md  Stools.py  Translation.py  animate.py  checkmate_exp.py  doc.md  ex_GPT2.ipynb  ex_GPT2_clean.ipynb  ex_graph_translator.ipynb  example_modules.py  exp_utils.py  experiments.py  forward.py  hiremate_twremat.def  mem_odd.py  mem_test.py  mem_test_clean.ipynb  mem_tools.py  merge_test.py  merge_test.sh  options_exp.py  pyproject.toml  read_trace_code.py  rkgb_README.md  rotor_exp.py  sched_results.py  test.py  test_clean.py  test_csolver.py  test_rkgb.ipynb  throughput_exp.py  (+2 more)
ILP/: graph_builder.py  gurobi_solver.py
examples/: run_gpt.py  utils.py
exp/: LLM.py  ab_exp.sh  check_rockmate.py  ds_config_zero2.json  ds_config_zero3.json  exp.py  hf_exp.py  visualize.py
experiments_on_checkmate/: graph_builder.py
hrockmate/: HILP_gurobi_chain.py  __init__.py  compiler.py  main.py  solver.c  translator.py
models/: FNO1d.py  FNO3d.py  GPT.py  UNO.py  __init__.py  integral_operators.py  (+1 more)
rkgb/: Atools.py  Atools_for_S_and_K.py  Btools.py  Dtools.py  Htools.py  Ktools.py  Ptools.py  README.md  Stools.py  __init__.py  main.py  pyproject.toml  setup.cfg
rkgb/rkgb/: Stools.py
rkgb/rkgb/utils/: __init__.py
rkgb/src/: Btools.py  Dtools.py  Ktools.py  Stools.py  __init__.py  main.py  rkgb.py
rkgb/src/core/: backward.py  base.py  forward.py  hierarchical.py  partitioned.py  raw.py  simplified.py
rkgb/src/lowlevel/: anonymize.py  ast_add_on.py  constants.py  execution_environments.py  inspection.py  jit_patch.py  measure.py  preprocess_device.py  preprocess_samples.py  variable_info.py
rkgb/src/rkgb/: rkgb.py
rkgb/src/rkgb/core/: backward.py  base.py  forward.py  hierarchical.py  partitioned.py  raw.py  simplified.py
rkgb/src/rkgb/lowlevel/: anonymize.py  ast_add_on.py  constants.py  execution_environments.py  inspection.py  measure.py  preprocess_device.py  preprocess_samples.py  variable_info.py
rkgb/src/rkgb/utils/: utils.py
rkgb/src/utils/: __init__.py  complement_for_Stools.py  def_info.py  def_inspection.py  def_nodes_and_graphs.py  global_vars.py  imports.py  imports_from_rotor.py  utils.py
rkgb/utils/: __init__.py  ast_add_on.py  def_info.py  def_inspection.py  def_nodes_and_graphs.py  global_vars.py  imports.py  imports_from_rotor.py  shared_methods.py  small_fcts.py
rockmate/: HILP_gurobi.py  HILP_gurobi_chain.py  ILP_MIP.py  ILP_gurobi_solver.py  OpSchedule.py  README.md  __init__.py  compiler.py  csequence.py  def_chain.py  def_code.py  def_op.py  def_sequence.py  defs.py  main.py  pyproject.toml  rotor_solver.py  sequence.py  setup.cfg  setup.py  solver.c  translator.py  use_chk.py  utils.py
rockmate/rkgb/: Atools_for_S_and_K.py  Dtools.py  Htools.py  Ktools.py  Ptools.py  Stools.py  __init__.py  main.py
rockmate/rkgb/utils/: __init__.py  ast_add_on.py  def_info.py  def_inspection.py  def_nodes_and_graphs.py  global_vars.py
rockmate/rockmate/: __init__.py  main.py  solver.c
rockmate/rockmate/solvers/: rk_rotor.py  rotor_solver.py  solver.c
rockmate/solvers/: HILP_gurobi.py  ILP_gurobi.py  __init__.py  def_chain.py  def_op.py  def_sequence.py  hilp.py  main.py  op_schedule.py  rk_checkmate.py  rk_rotor.py  rk_twremat.py  rotor_solver.py  setup.py  twremat.py  twremat_utils.py
rockmate/src/: ILP_MIP.py  __init__.py  compiler.py  def_chain.py  def_op.py  hrockmate.py  main.py  rockmate.py  rotor_solver.py  translator.py
rockmate/src/models/: __init__.py
rockmate/src/rockmate/: __init__.py  compiler.py  frontend.py  op_schedule.py  orockmate.py  rockmate.py  simulation.py  utils.py
rockmate/src/rockmate/solvers/: HILP_gurobi.py  HILP_pulp_ofl_para.py  HILP_scheduler.py  ILPoffload_new.md  __init__.py  cheap.py  hilp.py  main.py  op_schedule.py  rk_checkmate.py  rk_twremat.py  rockmate.py  twremat.py  twremat_utils.py
rockmate/src/rockmate/solvers/ilp/: __init__.py  ilp_model.py  ilp_offload.py  ilp_schedule.py  ilp_solver.py  ilp_utils.py
rockmate/src/rockmate/solvers/rk_rotor/: __init__.py  csequence.py  def_chain.py  def_sequence.py  rk_rotor.py  rotor_solver.py  solver.c
rockmate/src/solvers/: HILP_gurobi.md  HILP_gurobi.py  HILP_pulp.py  HILP_pulp_ofl_para.py  ILPoffload_draft.md  ILPoffload_gurobi.py  __init__.py  def_chain.py  def_op.py  hilp.py  main.py  op_schedule.py  twremat.py  twremat_utils.py
(+151 files in other folders)
