[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rkgb"
version = "2.0.0"
requires-python = ">=3.9"
license = {file = "COPYING"}
readme = "README.md"
description = "Efficient and Automatic Rematerialization for Pytorch training"
dependencies = [
    "torch >= 1.7",
    "astunparse >= 1.6.3",
    "psutil >= 2.0.0",
]
keywords = ["vizualisation", "pytorch"]
authors = [
  {name = "Théotime Le Hellard"},
  {name = "Xunyi Zhao"},
  {name = "Julia Gusak"},
  {name = "Li Zhe"},
  {name = "Olivier Beaumont"},
  {name = "Lionel Eyraud-Dubois"},
]
maintainers = [
  {name = "Lionel Eyraud-Dubois", email = "lionel.eyraud-dubois@inria.fr"}
]

[project.optional-dependencies]
draw = ["pygraphviz"]

[project.urls]
Repository = "https://github.com/topal-team/rockmate.git"

