[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rockmate"
version = "2.0.0"
requires-python = ">=3.8"
license = {file = "COPYING"}
readme = "README.md"
description = "Efficient and Automatic Rematerialization for Pytorch training"
dependencies = [
    "numpy",
    "torch >= 1.7",
    "rkgb >= 2.0.0",
    "pulp == 2.7.0",
    "configmypy >= 0.2.0",
]
keywords = ["rematerialization", "training", "pytorch", "memory"]
authors = [
  {name = "Théotime Le Hellard"},
  {name = "Xunyi Zhao"},
  {name = "Julia Gusak"},
  {name = "Li Zhe"},
  {name = "Olivier Beaumont"},
  {name = "Lionel Eyraud-Dubois"},
]
maintainers = [
  {name = "Lionel Eyraud-Dubois", email = "lionel.eyraud-dubois@inria.fr"}
]

[project.optional-dependencies]

[project.urls]
Repository = "https://github.com/topal-team/rockmate.git"

